Desafio Viajes chile 2 segundo commit

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     </div>
   </footer>
   <!-- Fin Footer -->
-  <script type="module" src="./assets/js/index.js"></script>
+  <script type="module" src="./assets/js/script.js"></script>
 </body>
 
 </html>
